fixed hovers on links wjith transitions, fixed horizontal scroll

--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -5,6 +5,9 @@
   justify-content: center;
   align-items: center;
   background-color: transparent;
+  cursor: pointer;
+  transition: background-color $transition-duration,
+    border-color $transition-duration;
 
   border: 2px solid $c-accent-orange;
   border-radius: 32px;
