--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -75,6 +75,11 @@
   &__contact-link {
     text-decoration: none;
     color: $c-white;
+    transition: color $transition-duration;
+
+    &:hover {
+      color: $c-accent-orange;
+    }
 
   }
 
