--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -3,6 +3,7 @@
   margin-bottom: 124px;
 
   &__top {
+    margin: 0 auto;
     margin-bottom: 32px;
 
     @include onTablet {
