--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -42,6 +42,11 @@
     text-decoration: none;
     color: $c-black;
     display: block;
+    transition: color $transition-duration;
+
+    &:hover {
+      color: $c-accent-orange;
+    }
 
     @extend %body-text;
 
