--- a/src/styles/blocks/_top.scss
+++ b/src/styles/blocks/_top.scss
@@ -1,5 +1,5 @@
 .top {
-  width: 100vw;
+  max-width: 1350px;
   display: flex;
   justify-content: space-between;
   padding: 16px;
